# calculator

./: .gitignore  AGENTS.md  README.md  RELEASING.md  UX-GUIDELINES.md  capacitor.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  spec.md  tsconfig.json  vite.config.ts
.github/workflows/: build-native.yml  feature-complete.yml  native-debug.yml  release-native.yml
e2e/: advanced-math.spec.ts  calculator.spec.ts  chemistry.spec.ts  keyboard-extras.spec.ts  sync-webdav-flow.spec.ts  tgc20-improvements.spec.ts  tgc22-modules.spec.ts  tgc23-ui-polish.spec.ts  tgc25-orientation-aspect.spec.ts  tgc26-rotate-button.spec.ts  tgc26-tester-independent.spec.ts  tgc27-wrap-and-containment.spec.ts  tgc29-graphing.spec.ts  theme.spec.ts
public/geogebra/: deployggb.js
scripts/: build.sh  fetch-bundle.sh  gen-icon.ts  release.sh  smoke.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/advanced/: cas.ts  simplifyWorker.ts
src/chemistry/: balancer.ts
src/components/: AdvancedMath.tsx  CalculatorPicker.tsx  ChemBalancer.tsx  Chip.tsx  DateTime.tsx  Display.tsx  GeoGebra.tsx  HistoryList.tsx  Key.tsx  Keypad.tsx  KeypadButton.tsx  Kin.tsx  Loan.tsx  Panel.tsx  Programmer.tsx  SyncSettings.tsx  TabBar.tsx  Tax.tsx  Units.tsx
src/data/: rates.json
src/engine/: index.ts  programmer.ts
src/history/: api.ts  sqlite.ts
src/hooks/: useI18n.ts  useKeyboardExtras.ts  useOrientation.ts  useSync.ts  useTheme.ts
(+83 files in other folders)
